boton para buscar caracteristis

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 					<p id = "estado" class="white-text">Desconectado.. </p>
 				</div>
 			</div>
-			<div id= "dispositivo">
-				<p>No device</p>
+			<div class= "col s12">
+				<div id = "dispositivo"></div>
+				<a id ="car" href= "#" class= "btn hide col s12">Buscar caracteristicas</a>
 			</div>	
 		</div>
 
